correções status update
